Bug 156784 - LO freezes if delete the first column on the table and the TC are hidden, pressing Ctrl+A
Summary: LO freezes if delete the first column on the table and the TC are hidden, pre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.2 target:7.6.1
Keywords: haveBacktrace
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2023-08-16 08:13 UTC by NISZ LibreOffice Team
Modified: 2023-09-06 12:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (10.23 KB, application/vnd.oasis.opendocument.text)
2023-08-16 08:13 UTC, NISZ LibreOffice Team
Details
bt after stack exploded (9.42 KB, text/plain)
2023-08-17 10:07 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-08-16 08:13:16 UTC
Description:
If you also delete the first column in the previous section, and TC are hidden, pressing Ctrl-A freezes the program. 
The cursor flashes, but no selection.

Steps to Reproduce:
1. Open attached document.
2  Delete the first column.
3. Pressing Ctrl-A.

Actual Results:
LO freezes.


Expected Results:
LO does not freeze.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5fecd865303b3f0a2eeb0b9466d2bcf23cfce068
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-08-16 08:13:42 UTC
Created attachment 188994 [details]
Sample file
Comment 2 Julien Nabet 2023-08-17 10:07:25 UTC
Created attachment 189005 [details]
bt after stack exploded

On pc Debian x86-64 with master sources updated today, I got a freeze then a crash since stack exploded.
I attached a bt.

I also noticed these:
arn:legacy.osl:11203:11203:sw/source/core/crsr/viscrs.cxx:1189: Node not in a table
warn:legacy.osl:11203:11203:sw/source/core/crsr/viscrs.cxx:1189: Node not in a table
warn:legacy.osl:11203:11203:sw/source/core/crsr/viscrs.cxx:1189: Node not in a table
warn:legacy.osl:11203:11203:sw/source/core/crsr/viscrs.cxx:1189: Node not in a table
warn:legacy.osl:11203:11203:sw/source/core/crsr/viscrs.cxx:1189: Node not in a table
warn:legacy.osl:11203:11203:sw/source/core/crsr/crsrsh.cxx:1933: Table Cursor not in Content ??
Comment 3 Commit Notification 2023-08-26 23:21:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e16e84c44fc7517529c8a183fbd8f97c0c3e380e

tdf#156784 sw tracked table column: fix crash at Select All

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2023-08-26 23:22:44 UTC
@Julien: thanks for your feedback!
Comment 5 Commit Notification 2023-08-29 13:06:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/49bfb463aebcfbe3935bc9989d9a1c5689149a09

tdf#156784 sw tracked table column: fix crash at Select All

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-09-06 12:09:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-1":

https://git.libreoffice.org/core/commit/720d333f4460ea50cad3c32f721e213b36c0140f

tdf#156784 sw tracked table column: fix crash at Select All

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.