tdf#156784 sw tracked table column: fix crash at Select All

Section starting table with hidden deleted first column
freezed at Select All, resulting crash because of infinite
recursion during waiting frame creation of a hidden cell
without frame in Hide Changes mode.

Regression from commit d1004cdd6a445ae73673b0ca360ae034b0ec09f2
"tdf#150673 sw offapi: add change tracking of table column deletion".

Change-Id: I15d9fa0138261d7a95c6e34a8d07fb2e001d0c7d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156056
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 15639650efb2fa44e96fdc2bd46a64931b9a3329)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156134
Tested-by: László Németh <nemeth@numbertext.org>